--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,10 @@ header h4{
   writing-mode: tb-rl;
   z-index: 20;
   bottom:50px;
-  right:20px;
+  right:0;
 }
 .nav2 li{
   letter-spacing: 10px;
-  margin:20px 0;
 }
 .nav2 li:first-child{
   margin-bottom:150px;
@@ -82,6 +81,7 @@ header h4{
   transition: transform .6s, color .2s;
   color:grey;
   font-size:12px;
+  padding:20px 20px;
 }
 .nav2 li a:hover {
   color:black;
