--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,19 @@ header h4{
   z-index: 0;
 }
 
+
+.down{
+  position: fixed;
+  bottom:10px;
+  left:30px;
+  font-size:40px;
+  color: gray;
+  z-index: 10;
+  animation: key2 1s ease infinite;
+}
+
+
+
 /* main-section */
 main{
   margin-top: -300px;
@@ -153,7 +166,7 @@ section td{
 
 /* footer */
 footer{
-  opacity:0.7;
+  opacity:0.5;
   background-color: white;
   position: relative;
   margin-top:300px;
@@ -162,27 +175,40 @@ footer{
   display:flex;
   justify-content: flex-start;
   align-items: center;
-  transition: opacity .6s;
+  transition: all .6s;
   cursor: pointer;
 }
 footer i{
-  opacity:0.5;
+  opacity:1;
   margin-top:20px;
   margin-left: 30px;
   color:gray;
   z-index:10;
   font-size: 40px;
-  transition: opacity .6s;
+  transition: all .6s;
+}
+footer p{
+  font-size: 12px;
+  letter-spacing: 5px;
+  padding-left: 15px;
+  padding-top: 3px;
+  color:gray;
+  transition: all .6s;
 }
 
 footer:hover{
-  opacity:1;
+  background-color: gray;
+}
+footer:hover p{
+  color:white;
+}
+footer:hover i{
+  color: white;
 }
 
 .bounce{
   animation: key1 1.5s ease infinite;
 }
-
 
 
 
@@ -241,11 +267,13 @@ footer:hover{
 }
 
 .modal-me{
+  padding: 0 100px;
   display:flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .modal-main-left{
   width:50%;
+  padding-right:50px;
 }
 .modal-main-right{
   width:50%;
