--- a/css/animation.css
+++ b/css/animation.css
@@ -14,6 +14,15 @@
   100% {transform: translateY(0px);}
 }
 
+@keyframes sk-scaleout {
+	0% {transform: scale(0);}
+	100% {
+  	transform: scale(1.0);
+    opacity: 0;
+  }
+}
+ 
+
 
 
 @keyframes menu-top {
@@ -82,4 +91,62 @@
 		-webkit-transform: translateY(0px) rotate(-45deg);
 		transform: translateY(0px) rotate(-45deg);
 	}
+}
+
+
+
+/* ローディングアニメーション */
+
+@keyframes breeding-rhombus-spinner-animation-child-1 {
+  50% {
+    transform: translate(-325%, -325%);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-2 {
+  50% {
+    transform: translate(0, -325%);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-3 {
+  50% {
+    transform: translate(325%, -325%);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-4 {
+  50% {
+    transform: translate(325%, 0);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-5 {
+  50% {
+    transform: translate(325%, 325%);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-6 {
+  50% {
+    transform: translate(0, 325%);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-7 {
+  50% {
+    transform: translate(-325%, 325%);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-8 {
+  50% {
+    transform: translate(-325%, 0);
+  }
+}
+
+@keyframes breeding-rhombus-spinner-animation-child-big {
+  50% {
+    transform: scale(0.5);
+  }
 }
