--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media(max-width:690px){
+@media(max-width:800px){
   header h4{
     font-size:16px;
     letter-spacing: 5px;
@@ -57,6 +57,26 @@
     justify-content: center;
     padding:0;
   }
+  .next{
+    right:10%;
+  }
+  .prev{
+    left:10%;
+  }
+
+  .slide-area{
+    width:300px;
+  }
+  .next,.prev{
+    top:40%;
+  }
+  .slick03{
+    margin-top:-50px;
+    width:300px;
+  }
+
+
+
   .close{
     position:absolute;
     right:0;
@@ -68,4 +88,8 @@
   .gmenu{
     display:flex;
   }
+
+
+
+
 }
